[Swagger]: add swagger to groupuser and user detail
